Fix bug #27436 dom_import_simplexml innaccurate extensions register callbacks to export nodes prevents segfault passing invalid objects to import functions